# new_solana_dex_project

./: .gitignore  Anchor.toml  Cargo.toml  README.md  build_log.txt  decodeKey.js  deploy_log.txt  my_dex_project-keypair.json  package-lock.json  package.json  server.js  tsconfig.json  vercel.json
analytics/: fetchWallets.js  index.js  package-lock.json  package.json  testMongoConnection.js  walletTracker.js
config/: db.js
cron/: updateTokens.js
models/: mintTokenModel.js
programs/my_dex_project/: Cargo.toml
programs/my_dex_project/src/: lib.rs  random.rs  token.rs
programs/yield_farm/src/: lib.rs
services/: dcaService.js  tokenService.js
solana-dex-frontend/: .gitignore  config-overrides.js  diff_output.txt  index.html  package-lock.json  package.json  patch-solana-web3.js  vercel.json  vite.config.js
solana-dex-frontend/.vercel/: project.json
solana-dex-frontend/api/: crypto.js
solana-dex-frontend/public/: index.html
solana-dex-frontend/src/: App.js  App.jsx  WalletProvider.js  config.jsx  fetchChartData.js  fetchTokenMetadata.js  fetchTokenMetadata.jsx  firebase.js  index.js
solana-dex-frontend/src/WalletProvider/: WalletProvider.jsx
solana-dex-frontend/src/components/: AdvancedChart.js  ConditionalOrder.js  CryptoChart.js  CryptoPrices.js  CustomizableDashboard.js  DCA.js  DCA.jsx  Dropdown.jsx  ErrorBoundary.jsx  Footer.jsx  Header.js  Header.jsx  Header.test.js  LimitOrder.js  LimitOrder.jsx  LiquidityPools.js  LivePrices.js  Notifications.js  Perps.js  (+34 more)
solana-dex-frontend/src_old/: App.jsx  fetchChartData.jsx
tests/: my_dex_project.ts
(+45 files in other folders)
